# CLARA

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLARA_Project_Documentation.docx  CLARA_Week4_Submission_Documentation.docx  CLARA_Week4_Submission_Documentation_updated.docx  DEPLOYMENT.md  Dockerfile.api  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  tmp_week4_handout_text.txt  tmp_week4_project_handout_text.txt  vercel.json
api/: index.py  requirements.txt
docs/: architecture.md  case_study_adv_007.md  cv_bullets.md  data_source.md  demo_assets.md  demo_script.md  evaluation_plan.md  sse_api.md  system_architecture.md  vercel_next_ui.md  week4_baseline_report.md  week4_eval_plan.md  week4_improvement_report.md  week4_submission.md  week4_submission_packet.md
loan_pipeline/: __init__.py  config.py  guardrails.py  observability.py
reports/: evaluation_report.md
sample_documents/: README.md
scripts/: week4_compare_runs.py  week4_export_dataset.py  week4_generate_report.py  week4_langsmith_dashboard.py  week4_run_baseline.py  week4_upload_dataset.py
src/: __init__.py
tests/: conftest.py  test_ablation.py  test_api_streaming.py  test_audit_log.py  test_calibration.py  test_contradictions.py  test_counterfactuals.py  test_cupcake_pipeline.py  test_drift.py  test_edge_cases.py  test_eval_foundation.py  test_failure_attribution.py  test_inter_rater.py  test_judge.py  test_langgraph_runtime.py  test_llm_client.py  test_llm_mode.py  test_mcp_evidence_server.py  test_observability.py  test_pdf_export.py  test_report.py  (+9 more)
(+73 files in other folders)
