[tool.ruff]
line-length = 100
target-version = "py311"

[project]
name = "loan-review-pipeline"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"loan_pipeline/ui/app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
