[tool.ruff]
line-length = 100
target-version = "py311"

[project]
name = "loan-review-pipeline"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langgraph==0.2.60",
    "pandas==2.2.3",
    "pdfplumber==0.11.4",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "uvicorn==0.34.0",
]

[project.scripts]
clara-mcp-evidence = "loan_pipeline.mcp.evidence_server:main"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"loan_pipeline/ui/app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
